// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu removes hidden state 1`] = `
<div
  className="hc-c-menu hc-c-menu--open"
  hidden={false}
  id="hc-c-menu"
>
  <MenuLinks
    links={
      Array [
        Object {
          "href": "#foo",
          "label": "Foo",
        },
        Object {
          "href": "#bar",
          "label": "Bar",
        },
      ]
    }
  />
</div>
`;

exports[`Menu renders MenuList 1`] = `
<div
  className="hc-c-menu"
  hidden={true}
  id="hc-c-menu"
>
  <MenuLinks
    links={
      Array [
        Object {
          "href": "#foo",
          "label": "Foo",
        },
        Object {
          "href": "#bar",
          "label": "Bar",
        },
      ]
    }
  />
</div>
`;
